Remove deprecated calls to Thread.getId()
https://docs.oracle.com/en/java/javase/20/docs/api/java.base/java/lang/Thread.html